<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#F45564"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColor="#000000"
        android:autoSizeTextType="uniform"
        android:textSize="20sp"
        android:text="@string/title_label" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:padding="2dp"
        android:text="Location"
        android:textColor="#000000"
        android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="1.0">

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="115dp"
        android:layout_height="26dp"
        android:layout_weight="0.6"
        android:textSize="16sp"
        android:padding="2dp"
        android:text="@string/date"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="italic"
        android:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/txt_start"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="0.2"
        android:autoSizeTextType="uniform"
        android:text="@string/start_time"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txt_end"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="7dp"
        android:layout_weight="0.2"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/end_time"
        android:textStyle="italic"
        android:autoSizeTextType="uniform" />
  </LinearLayout>
</LinearLayout>
