<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <include
      layout="@layout/toolbar"
      android:id="@+id/list_toolbar"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      app:layout_constraintBottom_toTopOf="@+id/recyclerView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_margin="2dp"
      android:layout_marginTop="48sp"
      android:background="@drawable/backgr"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_toolbar"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/btn_new_entry"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:clickable="true"
      android:contentDescription="@string/add_entry"
      android:focusable="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@android:drawable/ic_input_add"
      app:backgroundTint="#FFFFFF"
      app:tint="#000000"/>

</androidx.constraintlayout.widget.ConstraintLayout>
